fixed offcenter projects

--- a/src/output.css
+++ b/src/output.css
@@ -724,7 +724,7 @@ a:hover {
 .container {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 225px 225px 225px 225px;
+  grid-template-columns: 225px 225px 225px 225px 225px 225px ;
   margin: 20px auto;
 }
 
